--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .app {
     margin: 0 auto;
 }
@@ -11,4 +15,37 @@
     width: 80%;
     margin: 0 auto;
     height: 100vh;
+}
+
+.menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 260px;
+    height: 100vh;
+    background-color: #292929;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 1.2rem;
+    box-sizing: border-box;
+}
+
+.flex-grow {
+    margin-left: 260px;
+    width: calc(100% - 260px);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.logout-button {
+    padding: 0.3rem 0.7rem;
+    border: 1px solid black;
+    cursor: pointer;
+    border-radius: 15px;
+    background-color: #292929;
+    color: white;
 }
